# starting-ragchatbot-codebase

./: .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  models.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  mock_data.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py  test_utils.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  install-hooks.sh  lint.sh  quality.sh  run-hooks.sh  typecheck.sh
